--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
     <title>Portfolio Website</title>
 </head>
 <body>
+
+    <!--HEADER DESIGN-->
+
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
 
        <i class="fa-solid fa-bars" id="menu-icon"></i>
 
         <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="about">About</a>
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
             <a href="#services">Services</a>
             <a href="#contact">Contact</a>
         </nav>
     </header> 
+
+    <!--HOME SECTION-->
     
     <section class="home" id="home">
         <div class="home-container">
@@ -42,6 +47,8 @@
         </div>
     </section>
 
+    <!--ABOUT SECTION-->
+
     <section class="about" id="about">
         <div class="about-img">
             <img src="/Images/aboutpic.png" alt="">
@@ -54,6 +61,9 @@
             <a href="#" class="btn">Read more</a>
         </div>
     </section>
+
+    <!--SERVICES SECTION-->
+
     <section class="services" id="services">
         <h2 class="headinng">My <span>Services</span></h2>
 
@@ -81,6 +91,8 @@
         </div>
     </section>
 
+    <!--CONTACT SECTION-->
+
     <section class="contact" id="contact">
         <h2 class="headinng">Contact <span>Me</span></h2>
 
@@ -98,5 +110,18 @@
             <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
+
+    <!--FOOTER DESIGN-->
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2024 by @berenderhere | All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
+        </div>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
