--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
 
     <!--HEADER DESIGN-->
-
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
 
@@ -27,7 +26,6 @@
     </header> 
 
     <!--HOME SECTION-->
-    
     <section class="home" id="home">
         <div class="home-container">
             <h3>Hi, Myself</h3>
@@ -43,15 +41,14 @@
             <a href="#" class="btn">Download CV</a>
         </div>
         <div class="home-image">
-            <img src="/Images/profiledp.png" alt="">
+            <img src="/Images/WhatsApp Image 2024-04-24 at 17.40.08_6f4ff6ba.jpg" alt="">
         </div>
     </section>
 
     <!--ABOUT SECTION-->
-
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/Images/aboutpic.png" alt="">
+            <img src="/Images/aboutpic - Copy.png" alt="">
         </div>
 
         <div class="about-content">
@@ -63,7 +60,6 @@
     </section>
 
     <!--SERVICES SECTION-->
-
     <section class="services" id="services">
         <h2 class="headinng">My <span>Services</span></h2>
 
@@ -92,7 +88,6 @@
     </section>
 
     <!--CONTACT SECTION-->
-
     <section class="contact" id="contact">
         <h2 class="headinng">Contact <span>Me</span></h2>
 
@@ -112,7 +107,6 @@
     </section>
 
     <!--FOOTER DESIGN-->
-
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2024 by @berenderhere | All Rights Reserved.</p>
@@ -122,6 +116,8 @@
             <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
         </div>
     </footer>
-    <script src="script.js"></script>
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="script.js"></script> 
 </body>
 </html>
